test_scores/negative_dimers/features/O76071.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O76071.pkl.xz